--- a/src/main/resources/templates/verifyotp.html
+++ b/src/main/resources/templates/verifyotp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
@@ -22,6 +22,7 @@
  <button type="submit">Verify</button>
 
 </form>
+
 </div>
 
 <div th:if="${success}" class="success">
